// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag large size blue preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #0062C9FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-blue rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size blue preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #0062C9FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-blue rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size blue preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #0062C9FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-blue rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size blue-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #007BFB33;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-blue-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size blue-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #007BFB33;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-blue-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size blue-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #007BFB33;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-blue-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size cyan preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #006D75FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-cyan rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size cyan preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #006D75FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-cyan rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size cyan preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #006D75FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-cyan rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size cyan-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #13C2C233;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-cyan-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size cyan-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #13C2C233;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-cyan-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size cyan-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #13C2C233;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-cyan-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size default preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #686E78FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-default rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size default preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #686E78FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-default rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size default preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #686E78FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-default rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size geekblue preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #2F54EBFF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-geekblue rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size geekblue preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #2F54EBFF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-geekblue rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size geekblue preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #2F54EBFF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-geekblue rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size geekblue-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #2F54EB33;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-geekblue-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size geekblue-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #2F54EB33;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-geekblue-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size geekblue-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #2F54EB33;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-geekblue-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size gray preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #646A74FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-gray rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size gray preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #646A74FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-gray rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size gray preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #646A74FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-gray rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size gray-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #1D24361A;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-gray-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size gray-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #1D24361A;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-gray-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size gray-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #1D24361A;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-gray-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size green preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #34744FFF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-green rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size green preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #34744FFF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-green rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size green preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #34744FFF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-green rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size green-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #4DD08333;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-green-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size green-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #4DD08333;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-green-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size green-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #4DD08333;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-green-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size purple preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #6324B8FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-purple rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size purple preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #6324B8FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-purple rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size purple preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #6324B8FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-purple rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size purple-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #722ED133;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-purple-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size purple-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #722ED133;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-purple-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size purple-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #722ED133;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-purple-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size red preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #B4384DFF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-red rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size red preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #B4384DFF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-red rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size red preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #B4384DFF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-red rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size red-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #F04B6933;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-red-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size red-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #F04B6933;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-red-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size red-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #F04B6933;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-red-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size volcano preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #B72A07FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-volcano rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size volcano preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #B72A07FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-volcano rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size volcano preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #B72A07FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-volcano rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size volcano-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #FA541C33;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-volcano-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size volcano-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #FA541C33;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-volcano-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size volcano-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #FA541C33;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-volcano-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size yellow preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #925800FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-yellow rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size yellow preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #925800FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-yellow rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size yellow preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #925800FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-yellow rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size yellow-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #FAAD1433;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-yellow-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size yellow-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #FAAD1433;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-yellow-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag large size yellow-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 0 8px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #FAAD1433;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-yellow-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-large"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size blue preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #0062C9FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-blue rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size blue preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #0062C9FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-blue rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size blue preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #0062C9FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-blue rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size blue-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #007BFB33;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-blue-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size blue-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #007BFB33;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-blue-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size blue-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #007BFB33;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-blue-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size cyan preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #006D75FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-cyan rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size cyan preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #006D75FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-cyan rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size cyan preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #006D75FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-cyan rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size cyan-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #13C2C233;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-cyan-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size cyan-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #13C2C233;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-cyan-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size cyan-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #13C2C233;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-cyan-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size default preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #686E78FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-default rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size default preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #686E78FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-default rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size default preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #686E78FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-default rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size geekblue preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #2F54EBFF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-geekblue rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size geekblue preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #2F54EBFF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-geekblue rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size geekblue preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #2F54EBFF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-geekblue rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size geekblue-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #2F54EB33;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-geekblue-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size geekblue-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #2F54EB33;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-geekblue-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size geekblue-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #2F54EB33;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-geekblue-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size gray preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #646A74FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-gray rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size gray preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #646A74FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-gray rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size gray preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #646A74FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-gray rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size gray-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #1D24361A;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-gray-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size gray-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #1D24361A;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-gray-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size gray-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #1D24361A;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-gray-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size green preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #34744FFF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-green rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size green preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #34744FFF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-green rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size green preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #34744FFF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-green rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size green-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #4DD08333;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-green-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size green-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #4DD08333;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-green-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size green-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #4DD08333;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-green-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size purple preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #6324B8FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-purple rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size purple preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #6324B8FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-purple rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size purple preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #6324B8FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-purple rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size purple-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #722ED133;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-purple-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size purple-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #722ED133;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-purple-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size purple-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #722ED133;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-purple-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size red preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #B4384DFF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-red rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size red preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #B4384DFF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-red rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size red preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #B4384DFF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-red rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size red-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #F04B6933;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-red-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size red-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #F04B6933;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-red-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size red-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #F04B6933;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-red-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size volcano preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #B72A07FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-volcano rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size volcano preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #B72A07FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-volcano rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size volcano preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #B72A07FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-volcano rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size volcano-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #FA541C33;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-volcano-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size volcano-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #FA541C33;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-volcano-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size volcano-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #FA541C33;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-volcano-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size yellow preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #925800FF;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-yellow rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size yellow preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #925800FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-yellow rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size yellow preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #FFFFFFFF;
  background-color: #925800FF;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-yellow rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size yellow-light preset renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #FAAD1433;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-yellow-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size yellow-light preset with "borderRadius" as number renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #FAAD1433;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-yellow-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;

exports[`Tag medium size yellow-light preset with "borderRadius" as string renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  font-family: Museo Sans Cyrl,sans-serif;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  padding: 0 6px;
  border-radius: 12px;
  color: #343A4AFF;
  background-color: #FAAD1433;
  border-radius: 4px;
}

<span
  className="c0 rovna-ui-tag rovna-ui-tag-preset-yellow-light rovna-ui-tag-shape-ellipse rovna-ui-tag-size-medium"
  data-testid="rovna-ui-tag"
  style={
    {
      "whiteSpace": "nowrap",
    }
  }
/>
`;
